# PyTibia

./: .gitignore  LICENSE.md  README.es-es.md  README.es.md  README.md  README.pt-BR.md  TASKS.md  app.py  bar.py  battle.py  bot.py  buildFloorsPaths.py  buildMonstersForHud.py  buildSkillsCounts.py  config.json  file.json  fish.py  generateMonsterHash.py  getBattleListCreaturesTest.py  getHudMonstersTest.py  hd.py  hunt.py  huntByBattleListAndRadar.py  huntByHudAndRadar.py  lootTest.py  main.py  main_.py  mouse.py  mypy.ini  pathfinding.py  pathfindingTest.py  perf.py  pyproject.toml  radarTest.py  requirements.txt  screenshot.py  test.py  ui.py  video.py  waypointsTest.py
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  ---suggestion-for-improving-performance.md
.github/workflows/: ci.yml  codeql-analysis.yml
actionBar/: actionBar.py  config.py  cooldown.py  core.py  extractors.py  locators.py  slot.py
battleList/: battleList.py  config.py  core.py  extractors.py  locators.py  types.py  typing.py
battleList/docs/: README.md
chat/: chat.py  core.py
container/: container.py
core/: player.py  typing.py
docs/images/: gif1.gif:Zone.Identifier
docs/pytibia/: index.html  main.html  test.html
experiments/: getBattleListCreaturesTest.py  getHudMonstersTest.py  huntByBattleListAndRadar.py  lootTest.py  mouse.py
gameplay/: baseTasks.py  cavebot.py  decision.py  resolvers.py  taskExecutor.py  tasks.py  typings.py  waypoint.py
gameplay/factories/: makeAttackClosestCreature.py  makeBuyItemTask.py  makeClickInCoordinateTask.py  makeCloseNpcTradeBox.py  makeDepositItemsTask.py  makeLootCorpse.py  makeOpenBackpackTask.py  makeRefillCheckerTask.py  makeSayTask.py  makeSetChatOff.py  makeSetNextWaypointTask.py  makeUseHoleTask.py  makeUseRopeTask.py  makeUseShovelTask.py  makeWalkTask.py
gameplay/groupTasks/: groupOfAttackClosestCreatureTasks.py  groupOfDepositItemsTasks.py  groupOfFollowTargetCreatureTasks.py  groupOfLootCorpseTasks.py  (+16 more)
hud/: core.py  creatures.py  hud.py  slot.py  typing.py
inventory/: core.py  inventory.py
observables/: cavebot.py  healing.py  screenshot.py  waypoint.py
player/: core.py  player.py
pytibia/: pyvenv.cfg
radar/: README.md  config.py  core.py  extractors.py  locators.py  radar.py  radar2.py  types.py  waypoint.py
refill/: config.py  core.py  refill.py
setup/: core.py  pytibia.ini
skills/: config.py  core.py  locators.py
tests/: utils.py
ui/: README.md  app.py  config-overrides.js  database.sql  package.json  screenManager.py  tsconfig.json  tsconfig.main.json
utils/: AStar.py  array.py  coordinate.py  core.py  image.py  matrix.py  mouse.py  utils.py  window.py
wiki/: cities.py  creatures.py
(+652 files in other folders)
