[tool.poetry]
name = "pytibia"
version = "0.1.0"
description = ""
authors = ["lucasmonstro <joao.galiano.silva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
ahocorapy = "^1.6.1"
dxcam = {git = "https://github.com/ra1nty/DXcam"}
eventlet = "^0.33.1"
nptyping = "^2.3.1"
numpy = "1.21.4"
opencv-python = "^4.6.0.66"
pillow = "^9.1.1"
pyautogui = "^0.9.53"
pygetwindow = "^0.0.9"
python = "3.9.13"
python-socketio = "^5.7.2"
rx = "^3.2.0"
scipy = "^1.9.1"
tcod = "^13.8.1"
xxhash = "^3.1.0"
numba = "^0.56.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"

[tool.taskipy.tasks]
test = "python -m pytest ."
add-torch = "pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu117"
add-easyocr = "pip install git+https://github.com/JaidedAI/EasyOCR.git"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"